showAllTags prototype is functional

--- a/WTF_DICOM/App.xaml
+++ b/WTF_DICOM/App.xaml
@@ -10,8 +10,8 @@
                                      PrimaryColor="Purple" 
                                      SecondaryColor="LightGreen" />
 
-        <ResourceDictionary
-                    Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
 
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
