--- a/WTF_DICOM/TagsAndValuesWindow.xaml
+++ b/WTF_DICOM/TagsAndValuesWindow.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WTF_DICOM" xmlns:models="clr-namespace:WTF_DICOM.Models" d:DataContext="{d:DesignInstance Type=models:DicomFileCommon}"
+        xmlns:local="clr-namespace:WTF_DICOM"
+        xmlns:models="clr-namespace:WTF_DICOM.Models"
+        d:DataContext="{d:DesignInstance Type=models:DicomFileCommon}"
         mc:Ignorable="d"
         Title="TagsAndValuesWindow" Height="580" Width="800">
   <Grid>
@@ -15,7 +17,7 @@
       <!--Header-->
       <RowDefinition Height="auto" />
       <!--Content-->
-      <RowDefinition Height="*" />
+      <RowDefinition Height="560" />
       <!--Margin-->
       <RowDefinition Height="1" />
     </Grid.RowDefinitions>
