--- a/WTF_DICOM/MainWindow.xaml
+++ b/WTF_DICOM/MainWindow.xaml
@@ -107,7 +107,7 @@
           <DataGridTextColumn Binding="{Binding SOPInstanceUID}" Header="SOPInstanceUID" />
         </DataGrid.Columns>-->
 
-        <DataGrid.ContextMenu>
+        <!--<DataGrid.ContextMenu>
           <ContextMenu>
             <MenuItem Header="Copy Cell To Clipboard"
                       Command="{Binding CopyToClipboardCommand}"
@@ -122,13 +122,36 @@
                       Command="{Binding ShowRelatedFilesCommand}"
                       CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}, Path=PlacementTarget.SelectedCells[0].Item}" />
           </ContextMenu>
-        </DataGrid.ContextMenu>
+        </DataGrid.ContextMenu>-->
+
+        <!--<DataGrid.Resources>
+          <Style TargetType="{x:Type DataGridColumnHeader}">
+            <Setter Property="ContextMenu">
+              <Setter.Value>
+                <ContextMenu>
+                  <MenuItem Header="Remove Column From Display"
+                            Command="{Binding RemoveColumnFromDisplayCommand}"
+                            CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}, Path=PlacementTarget.SelectedCells[0].Item}"/>
+                </ContextMenu>
+              </Setter.Value>
+            </Setter>
+          </Style>
+        </DataGrid.Resources>-->
+
+        <!--<DataGrid ContextMenuOpening="DataGridContextMenuOpeningHandler" />-->
 
         <DataGrid.CellStyle>
           <Style TargetType="{x:Type DataGridCell}">
             <EventSetter Event="GotFocus" Handler="CellClick"/>
+            <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridContextMenuOpeningHandler"/>
           </Style>
         </DataGrid.CellStyle>
+
+        <!--<DataGrid.CellStyle>
+          <Style TargetType="DataGridCell" BasedOn="{StaticResource {x:Type DataGridCell}}">
+            <EventSetter Event="GotFocus" Handler="CellClick"/>
+          </Style>
+        </DataGrid.CellStyle>-->
 
 
       </DataGrid>
