added titles and improved sequence labeling to include index

--- a/WTF_DICOM/App.xaml
+++ b/WTF_DICOM/App.xaml
@@ -6,7 +6,7 @@
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
-        <materialDesign:BundledTheme BaseTheme="Inherit" 
+        <materialDesign:BundledTheme BaseTheme="Dark" 
                                      PrimaryColor="Purple" 
                                      SecondaryColor="LightGreen" />
 
