--- a/WTF_DICOM/App.xaml
+++ b/WTF_DICOM/App.xaml
@@ -1,19 +1,5 @@
 ﻿<Application x:Class="WTF_DICOM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WTF_DICOM"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
-  <Application.Resources>
-    <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <materialDesign:BundledTheme BaseTheme="Dark" 
-                                     PrimaryColor="Purple" 
-                                     SecondaryColor="LightGreen" />
-
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
-
-      </ResourceDictionary.MergedDictionaries>
-    </ResourceDictionary>
-  </Application.Resources>
+             xmlns:local="clr-namespace:WTF_DICOM">
 </Application>
