--- a/WTF_DICOM/MainWindow.xaml
+++ b/WTF_DICOM/MainWindow.xaml
@@ -1,4 +1,6 @@
-﻿<Window x:Class="WTF_DICOM.MainWindow"
+﻿<syncfusion:ChromelessWindow
+        x:Class="WTF_DICOM.MainWindow"
+        xmlns:syncfusion="http://schemas.syncfusion.com/wpf" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +9,7 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel, IsDesignTimeCreatable=False}"
         SizeChanged="Window_SizeChanged"
-        Style="{StaticResource MaterialDesignWindow}"
-        Title="WTF DICOM" Height="540" Width="820">
+        Title="WTF DICOM" Height="540" Width="1020">
   <Grid Width="800" x:Name="MainWindowLayoutGrid">
     <Grid.RowDefinitions>
       <!--Menu-->
@@ -50,8 +51,29 @@
 
 
     <!-- try using a  scrollviewer around the datagrid??? -->
+    <syncfusion:DockingManager
+      Grid.Column="0" Grid.Row="2"
+      x:Name="MainWindowContentDockingManager"
+      ContainerMode="TDI"
+      UseNativeFloatWindow="False"
+      EnableMouseHoverBackground="False"
+      EnableScrollableSidePanel="True"
+      IsEnableHotTracking="False"
+      IsVS2010DraggingEnabled="True"
+      PersistState="False"
+      UseDocumentContainer="True">
 
-    <DataGrid Grid.Column="0" Grid.Row="2"
+      <ContentControl
+          syncfusion:DockingManager.DesiredHeightInFloatingMode="200"
+          syncfusion:DockingManager.DesiredWidthInDockedMode="800"
+          syncfusion:DockingManager.DesiredWidthInFloatingMode="150"
+          syncfusion:DockingManager.Header="Dicom Files"
+          syncfusion:DockingManager.SideInDockedMode="Left"
+          syncfusion:DockingManager.State="Dock"
+          syncfusion:DocumentContainer.MDIBounds="30,30,500,300"
+          BorderThickness="0">
+
+        <DataGrid
                 ItemsSource="{Binding DicomFiles}"
                 x:Name="DicomFileCommonDataGrid"
                 AutoGenerateColumns="False"
@@ -64,34 +86,36 @@
                 CanUserResizeColumns="True"
                 CanUserSortColumns="False"
                 SelectionMode="Single" SelectionUnit="CellOrRowHeader"
-                AlternationCount="2" AlternatingRowBackground="DarkViolet">
+                AlternationCount="2" AlternatingRowBackground="LightPink">
 
-      <DataGrid.CellStyle>
-        <Style TargetType="{x:Type DataGridCell}"
+          <DataGrid.CellStyle>
+            <Style TargetType="{x:Type DataGridCell}"
                BasedOn="{StaticResource {x:Type DataGridCell}}">
-          <EventSetter Event="GotFocus" Handler="CellClick"/>
-          <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridContextMenuOpeningHandler"/>
-          <!--<Setter Property="BorderBrush" Value="DarkViolet"/>
+              <EventSetter Event="GotFocus" Handler="CellClick"/>
+              <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridContextMenuOpeningHandler"/>
+              <!--<Setter Property="BorderBrush" Value="DarkViolet"/>
           <Setter Property="BorderThickness" Value="1"/>-->
-          <Setter Property="Margin" Value="10,0,0,0"/>
-          <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-      </DataGrid.CellStyle>
+              <Setter Property="Margin" Value="10,0,0,0"/>
+              <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+          </DataGrid.CellStyle>
 
-      <DataGrid.ColumnHeaderStyle>
-        <Style TargetType="{x:Type DataGridColumnHeader}"
+          <DataGrid.ColumnHeaderStyle>
+            <Style TargetType="{x:Type DataGridColumnHeader}"
                BasedOn="{StaticResource {x:Type DataGridColumnHeader}}">
-          <EventSetter Event="GotFocus" Handler="HeaderClick"/>
-          <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridHeaderContextMenuOpeningHandler"/>
-          <Setter Property="Margin" Value="0,1,0,0"/>
-          <Setter Property="BorderThickness" Value="1"/>
-        </Style>
-      </DataGrid.ColumnHeaderStyle>
+              <EventSetter Event="GotFocus" Handler="HeaderClick"/>
+              <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridHeaderContextMenuOpeningHandler"/>
+              <Setter Property="Margin" Value="0,1,0,0"/>
+              <Setter Property="BorderThickness" Value="1"/>
+            </Style>
+          </DataGrid.ColumnHeaderStyle>
 
 
-    </DataGrid>
+        </DataGrid>
 
+      </ContentControl>
+    </syncfusion:DockingManager>
   </Grid>
   <!--end layout Grid-->
-  
-</Window>
+
+</syncfusion:ChromelessWindow>
