--- a/WTF_DICOM/ReferencedSOPInstanceUIDsWindow.xaml
+++ b/WTF_DICOM/ReferencedSOPInstanceUIDsWindow.xaml
@@ -1,5 +1,6 @@
-﻿<Window x:Class="WTF_DICOM.ReferencedSOPInstanceUIDsWindow"
+﻿<syncfusion:ChromelessWindow x:Class="WTF_DICOM.ReferencedSOPInstanceUIDsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:syncfusion="http://schemas.syncfusion.com/wpf" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -30,7 +31,7 @@
          HorizontalScrollBarVisibility="Visible"
          IsReadOnly="True"
          SelectionMode="Single" SelectionUnit="FullRow"
-         AlternationCount="2" AlternatingRowBackground="DarkViolet">
+         AlternationCount="2" AlternatingRowBackground="LightSkyBlue">
       <DataGrid.Columns>
         <DataGridTextColumn Binding="{Binding DicomFileModality}" Header="Modality" />
         <DataGridTextColumn Binding="{Binding ReferencedSOPInstanceUID}" Header="ReferencedSOPInstanceUID" />
@@ -50,4 +51,4 @@
     </DataGrid>
 
   </Grid>
-</Window>
+</syncfusion:ChromelessWindow>
